[build-system]
requires = ["setuptools>=59.6.0"]
build-backend = "setuptools.build_meta"

[project]
name = "phph"
version = "0.1"
dependencies = [
  "numpy>=1.24.2",
  "scipy>=1.10.1"
]
authors = [
  { name="Anders Reenberg Andersen", email="andersra@live.dk" },
]
description = "A Python package for PH/PH/c queueing systems"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/areenberg/phph"
Issues = "https://github.com/areenberg/phph/issues"